@@ -437,6 +437,9 @@ elif [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
     else
         export APTGET="apt-get"
     fi
+    if [ X"${DISTRO_CODENAME}" == X'xenial']; then
+        export APTGET="apt"
+    fi
 
     # Package management.
     export install_pkg='install_pkg_debian'
