@@ -64,8 +64,7 @@ export POSTFIX_FILE_BODY_CHECKS="${POSTFIX_ROOTDIR}/body_checks.pcre"
 export POSTFIX_FILE_SENDER_ACCESS="${POSTFIX_ROOTDIR}/sender_access.pcre"
 
 # Default transport or LDA (local deliver agent).
-# We use dovecot deliver program as default transport.
-export TRANSPORT='dovecot'
+export TRANSPORT="${DOVECOT_LDA_LMTP_SOCKET}"
 
 # Set 'message_size_limit', in 'byte'. Default is 10M.
 export MESSAGE_SIZE_LIMIT='15728640'
