@@ -158,6 +158,7 @@ EOF
     ECHO_DEBUG "Configure general settings."
     perl -pi -e 's#^(webmaster =).*#${1} "$ENV{FIRST_USER}\@$ENV{FIRST_DOMAIN}"#' settings.py
     perl -pi -e 's#^(storage_base_directory =).*#${1} "$ENV{STORAGE_MAILBOX_DIR}"#' settings.py
+    perl -pi -e 's#^(default_mta_transport =).*#${1} "$ENV{DOVECOT_LDA_LMTP_SOCKET}"#' settings.py
 
     # [iredadmin] section.
     ECHO_DEBUG "Configure iredadmin database related settings."
